# market-data-pipeline

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PROJECT_STRUCTURE.md  README.md  SESSION_HANDOFF.md  check_delisted_stocks.py  delisted_stocks.py  docker-compose.yml  load_delisted_data.py  progress.md  pyproject.toml  test_fdr_api.py
scripts/: README.md  backtest_queries.py  check_stock_data.py  daily_stock_master_update.py  export_to_parquet.py  initial_setup.py  load_stock_master_clickhouse.py  load_stock_prices.py  setup_clickhouse.py  sync_delisted_stocks.py  sync_new_listings.py  update_delisted_clickhouse.py  update_delisted_from_parquet.py
src/: README.md
src/clickhouse/: __init__.py  client.py  price_client.py  stock_master.py
src/crawlers/: krx_delisted_crawler.py  krx_new_listing_crawler.py
src/database/: connection.py  create_master_table.py
src/models/: delisted_stocks.py
src/setup/: README.md  __init__.py  setup_stock_master_clickhouse.py
src/storage/: models.py  stock_price.py
tests/: test_initial_setup.py  test_krx_new_listing_crawler.py  test_stock_master_clickhouse.py  test_sync_delisted_stocks.py
