[project]
name = "market-data-pipeline"
version = "0.1.0"
description = "주식의 과거 데이터 수집, 그리고 일간 데이터 배치 파이프라인"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars>=0.20.31",
    "finance-datareader>=0.9.31",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.25",
    "python-dotenv>=1.0.0",
    "schedule>=1.2.0",
    "requests>=2.31.0",
    "xlrd>=2.0.2",
    "pyarrow>=21.0.0",
    "openpyxl>=3.1.5",
    "fastexcel>=0.15.1",
    "clickhouse-connect>=0.7.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
